[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/GUI/dash_cooldown.png" type="Texture" id=1]
[ext_resource path="res://src/GUI/DashCooldownUI.gd" type="Script" id=2]

[node name="DashCooldownUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.11362
margin_top = 0.222725
margin_right = 1.11365
margin_bottom = 0.222717
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 18.9316, 16.9271 )
texture = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -2.06841
margin_top = 33.9271
margin_right = 39.9316
margin_bottom = 47.9271
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntervalTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="IntervalTimer" to="." method="_intervalAdjust"]
[connection signal="timeout" from="CooldownTimer" to="." method="_fullProgress"]
